--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # データベースの接続情報
-DB_HOST=rdbs-002-step3-2-oshima5.mysql.database.azure.com
-DB_USER=tech0gen9student
-DB_PASSWORD=vY7JZNfU
-DB_NAME=ukese0608
+DB_HOST=rdbs-step4-france-central.mysql.database.azure.com
+DB_USER=tech0sql1
+DB_PASSWORD=step4pos-3
+DB_PORT=3306
+DB_NAME=pos_asuka
 
