--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-# データベースの接続情報
-DB_HOST=rdbs-step4-france-central.mysql.database.azure.com
-DB_USER=tech0sql1
-DB_PASSWORD=step4pos-3
-DB_PORT=3306
-DB_NAME=pos_asuka
-
+DATABASE_URL=mysql+pymysql://tech0sql1:step4pos-3@rdbs-step4-france-central.mysql.database.azure.com/pos_kimurayasuhide?ssl_ca=./DigiCert20250530.crt.pem
